# django-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml  secret.py
backend/: manage.py
backend/apps/polls/: models.py  views.py
backend/apps/polls/migrations/: 0001_initial.py
backend/common/: models.py  urls.py
backend/config/: urls.py
backend/config/settings/: base.py  local_base.py  production.py  test.py
backend/static/css/: base.css
backend/templates/: base.html
backend/templates/common/: index.html
backend/templates/defender/: lockout.html
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_views.py
